--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 	<body>
 		<h1>Odin Recipes</h1>
 		<a href="./recipes/chicken-tortilla-soup.html">Chicken Tortilla Soup</a>
+		<a href="./recipes/bibimbap.html">Bibimbap (Korean Rice with Mixed Vegetables)</a>
 	</body>
 </html>
