Add link to recipe #3 on home page

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 		<h1>Odin Recipes</h1>
 		<a href="./recipes/chicken-tortilla-soup.html">Chicken Tortilla Soup</a>
 		<a href="./recipes/bibimbap.html">Bibimbap (Korean Rice with Mixed Vegetables)</a>
+		<a href="./recipes/souvlaki.html">Souvlaki</a>
 	</body>
 </html>
