--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 
 	<body>
 		<h1>Odin Recipes</h1>
-		<a href="./recipes/chicken-tortilla-soup.html">Chicken Tortilla Soup</a>
-		<a href="./recipes/bibimbap.html">Bibimbap (Korean Rice with Mixed Vegetables)</a>
-		<a href="./recipes/souvlaki.html">Souvlaki</a>
+		<ul>
+			<li><a href="./recipes/chicken-tortilla-soup.html">Chicken Tortilla Soup</a></li>
+			<li><a href="./recipes/bibimbap.html">Bibimbap (Korean Rice with Mixed Vegetables)</a></li>
+			<li><a href="./recipes/souvlaki.html">Souvlaki</a></li>
+		</ul>
 	</body>
 </html>
