Remove unit from image dimension

--- a/recipes/bibimbap.html
+++ b/recipes/bibimbap.html
@@ -7,7 +7,7 @@
 
 	<body>
 		<h1>Bibimbap (Korean Rice with Mixed Vegetables)</h1>
-		<img src="../img/bibimbap.png" alt="A bowl of bibimbap topped with vegetables, beef, a whole egg, and gochujang" width="750px" height="563px">
+		<img src="../img/bibimbap.png" alt="A bowl of bibimbap topped with vegetables, beef, a whole egg, and gochujang" width="750" height="563">
 
 		<h2>Description</h2>
 		<p>This bibimbap recipe makes a popular and delicious Korean meal. Meaning mixed rice, bibimbap is a delicious rice bowl topped with vegetables, beef, a whole egg, and gochujang (red chili pepper paste). Traditionally, bibimbap was eaten on the eve of the Lunar New Year, to use up any leftovers before the start of the new year.</p>
