--- a/recipes/chicken-tortilla-soup.html
+++ b/recipes/chicken-tortilla-soup.html
@@ -7,7 +7,7 @@
 
 	<body>
 		<h1>Chicken Tortilla Soup</h1>
-		<img src="../img/chicken-tortilla-soup.png" alt="A bowl of chicken tortilla soup" width="512px" height="512px">
+		<img src="../img/chicken-tortilla-soup.png" alt="A bowl of chicken tortilla soup" width="512" height="512">
 
 		<h2>Description</h2>
 		<p>This comforting chicken tortilla soup with shredded chicken, black beans, and corn is quick to make, full of flavor, and very filling! Garnish with chopped fresh avocado, Monterey Jack cheese, crushed tortilla chips, and green onion.</p>
