--- a/recipes/souvlaki.html
+++ b/recipes/souvlaki.html
@@ -7,7 +7,7 @@
 
 	<body>
 		<h1>Souvlaki</h1>
-		<img src="../img/souvlaki.png" alt="A pile of skewered souvlaki" width="512px" height="512px">
+		<img src="../img/souvlaki.png" alt="A pile of skewered souvlaki" width="512" height="512">
 
 		<h2>Description</h2>
 		<p>Souvlaki is a Greek specialty made with tender cuts of meat. In this recipe, pork tenderloin is marinated in a lemony mixture of olive oil and oregano. Serve with rice pilaf and a Greek salad.</p>
